Add save_unaligned for bowtie2 and refactor in star

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -236,10 +236,18 @@ if (params.aligner == 'bowtie2') {
             ext.args   = ''
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
-                path: { "${params.outdir}/${params.aligner}/library" },
-                mode: params.publish_dir_mode,
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-                enabled: false
+                [
+                    path: { "${params.outdir}/${params.aligner}/library" },
+                    mode: params.publish_dir_mode,
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+                    enabled: false
+                ],
+                [
+                    path: { "${params.outdir}/${params.aligner}/library/unmapped" },
+                    mode: params.publish_dir_mode,
+                    pattern: '*.fastq.gz',
+                    enabled: params.save_unaligned
+                ]
             ]
         }
     }
@@ -283,7 +291,7 @@ if (params.aligner == 'star') {
             ].join(' ').trim()
             publishDir = [
                 [
-                    path: { "${params.outdir}/${params.aligner}/log" },
+                    path: { "${params.outdir}/${params.aligner}/library/log" },
                     mode: params.publish_dir_mode,
                     pattern: '*.{out,tab}'
                 ],
@@ -294,7 +302,7 @@ if (params.aligner == 'star') {
                     enabled: false
                 ],
                 [
-                    path: { "${params.outdir}/${params.aligner}/unmapped" },
+                    path: { "${params.outdir}/${params.aligner}/library/unmapped" },
                     mode: params.publish_dir_mode,
                     pattern: '*.fastq.gz',
                     enabled: params.save_unaligned
