--- a/conf/modules.config
+++ b/conf/modules.config
@@ -188,19 +188,8 @@ process {
         ]
     }
 
-    // Lb.sorted in samtools_stats should be saved for save_align_intermeds, check if it is this one or not
-    // corresponds just after the alignment//TODO: fix this
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
-    //     ext.prefix = { "${meta.id}.Lb.sorted" }
-    //     publishDir = [
-    //         path: { "${params.outdir}/${params.aligner}/library/samtools_stats" },
-    //         mode: params.publish_dir_mode,
-    //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    //     ]
-    // }
-
-    //Chromap does not find this config selector //TODO: fix this //Fixed
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
+        ext.prefix = { "${meta.id}.Lb.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library/samtools_stats/" },
             mode: params.publish_dir_mode,
@@ -319,7 +308,6 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    // TODO parece que no funciona!!! SET SAVE_ALIGN_INTERMEDS (mirar si picard metrics tb)
     withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
         ext.args   = '--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
@@ -348,6 +336,7 @@ process {
     }
 
     withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
+        ext.prefix = { "${meta.id}.mLb.mkD.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
             mode: params.publish_dir_mode,
@@ -355,11 +344,9 @@ process {
         ]
     }
 
-    //TODO
     // Should only be published when paired end data is used and save_align_intermeds is true
     withName: 'BAM_FILTER' {
-        // ext.prefix = { "${meta.id}.mLb.flT.sorted" }
-        ext.prefix = { meta.single_end ?  "${meta.id}.mLb.test" : "${meta.id}.mLb.flT.sorted" }
+        ext.prefix = { meta.single_end ?  "${meta.id}.mLb.noPublish" : "${meta.id}.mLb.flT.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: params.publish_dir_mode,
@@ -393,7 +380,7 @@ process {
     }
 
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
-        ext.prefix = { "${meta.id}.mLb.clN.sorted" }
+        ext.prefix = { "${meta.id}.mLb.clN.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
             mode: params.publish_dir_mode,
