--- a/conf/modules.config
+++ b/conf/modules.config
@@ -616,8 +616,7 @@ if (!params.skip_consensus_peaks) {
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                    '/consensus',
-                    "/${meta.id}"
+                    '/consensus'
                     ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -630,8 +629,7 @@ if (!params.skip_consensus_peaks) {
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                     params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                    '/consensus',
-                    "/${meta.id}"
+                    '/consensus'
                     ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -648,8 +646,7 @@ if (!params.skip_consensus_peaks) {
                     path: { [
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
-                        '/consensus',
-                        "/${meta.id}"
+                        '/consensus'
                         ].join('') },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
@@ -673,7 +670,6 @@ if (!params.skip_consensus_peaks) {
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
                         params.narrow_peak? '/narrowPeak' : '/broadPeak',
                         '/consensus',
-                        "/${meta.id}",
                         '/deseq2'
                         ].join('') },
                     mode: params.publish_dir_mode,
