Switch --preset chip by its argument to not include the removal of duplicates

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -253,7 +253,7 @@ if (params.aligner == 'chromap') {
             ]
         }
         withName: CHROMAP_CHROMAP {
-            ext.args   = '--preset chip --SAM'
+            ext.args   = '-l 2000 --low-mem --SAM'
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
