Suggested fix for macs

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -520,10 +520,11 @@ process {
     withName: 'MACS2_CALLPEAK' {
         ext.args   = [
             '--keep-dup all',
-            params.narrow_peak      ? '' : "--broad --broad-cutoff ${params.broad_cutoff}",
-            params.save_macs_pileup ? '--bdg --SPMR' : '',
-            params.macs_fdr         ? "--qvalue ${params.macs_fdr}" : '',
-            params.macs_pvalue      ? "--pvalue ${params.macs_pvalue}" : ''
+            params.narrow_peak          ? '' : "--broad --broad-cutoff ${params.broad_cutoff}",
+            params.save_macs_pileup     ? '--bdg --SPMR' : '',
+            params.macs_fdr             ? "--qvalue ${params.macs_fdr}" : '',
+            params.macs_pvalue          ? "--pvalue ${params.macs_pvalue}" : '',
+            params.aligner == "chromap" ? "--format BAM" : ''
         ].join(' ').trim()
         publishDir = [
             path: { [
