Fix indexes publication

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -54,9 +54,15 @@ process {
 
     withName: 'UNTAR_.*' {
         ext.args2 = '--no-same-owner'
+        publishDir = [
+            path: { "${params.outdir}/genome/index" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
     }
 
-    withName: 'UNTAR_.*|BWA_INDEX|BOWTIE2_BUILD|STAR_GENOMEGENERATE' {
+    withName: 'BWA_INDEX|BOWTIE2_BUILD|STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
