Add annotate_boolean_peaks process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -581,6 +581,18 @@ if (!params.skip_peak_annotation) {
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
+
+        withName: 'ANNOTATE_BOOLEAN_PEAKS' {
+            ext.prefix = { "${meta.id}_peaks" }
+            publishDir = [
+                path: { [
+                    "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
+                    params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                    ].join('') },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
     }
 
     if (!params.skip_peak_qc) {
