Fix publish folder for annotate_boolean_peaks

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -587,11 +587,13 @@ if (!params.skip_peak_annotation) {
             publishDir = [
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
-                    params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                    ].join('') },
+                    params.narrow_peak? '/narrowPeak' : '/broadPeak',
+                    '/consensus'
+                ].join('') },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
+
         }
     }
 
