--- a/nextflow.config
+++ b/nextflow.config
@@ -218,7 +218,7 @@ manifest {
     description     = 'ChIP-seq peak-calling and differential analysis pipeline.'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.10.3'
-    version         = '1.3.0dev'
+    version = '2.0.0'
 }
 
 // Load modules.config for DSL2 module specific options
