Fix labels for deeptools plotfingerprint

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -510,7 +510,7 @@ if (!params.skip_plot_fingerprint) {
             ext.args   = { [
                 '--skipZeros',
                 "--numberOfSamples $params.fingerprint_bins",
-                "--labels $meta.ip $meta.control"
+                "--labels $meta.id $meta.control"
             ].join(' ').trim() }
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
