Fix nf-core lint

--- a/nextflow.config
+++ b/nextflow.config
@@ -230,7 +230,7 @@ dag {
 
 manifest {
     name            = 'nf-core/chipseq'
-    author          = 'Jose Espinosa-Carrasco, Harshil Patel, Philip Ewels'
+    author          = 'Espinosa-Carrasco J, Patel H, Wang C, Ewels P'
     homePage        = 'https://github.com/nf-core/chipseq'
     description     = 'ChIP-seq peak-calling and differential analysis pipeline.'
     mainScript      = 'main.nf'
