Fix or reword bits in the pipeline

--- a/conf/test.config
+++ b/conf/test.config
@@ -11,13 +11,13 @@
 */
 
 params {
-    config_profile_name = 'Test profile'
+    config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus = 2
-    max_memory = 6.GB
-    max_time = 6.h
+    max_cpus   = 2
+    max_memory = '6.GB'
+    max_time   = '6.h'
 
     // Input data
     input       = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
