--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -17,7 +17,7 @@ params {
     // Input data for full size test
     input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_full.csv'
 
-    // Used to get macs_gsize
+    // Used to calculate --macs_gsize
     read_length = 50
 
     // Genome references
