--- a/conf/modules.config
+++ b/conf/modules.config
@@ -690,6 +690,7 @@ if (!params.skip_consensus_peaks) {
                     '--count_col 7',
                     params.deseq2_vst ? '--vst TRUE' : ''
                 ].join(' ').trim()
+                ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { [
                         "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
