Switch deseq2_vst to true by default

--- a/nextflow.config
+++ b/nextflow.config
@@ -50,7 +50,7 @@ params {
     skip_consensus_peaks       = false
 
     // Options: DESeq2 QC
-    deseq2_vst                 = false
+    deseq2_vst                 = true
     skip_deseq2_qc             = false
 
     // Options: QC
