--- a/nextflow.config
+++ b/nextflow.config
@@ -232,7 +232,7 @@ manifest {
     description     = 'ChIP-seq peak-calling and differential analysis pipeline.'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.10.3'
-    version         = '2.0.0'
+    version = '2.1.0dev'
 }
 
 // Load modules.config for DSL2 module specific options
