use the  FASTQ_FASTQC_UMITOOLS_TRIMGALORE subworkflow insead of fastq_trimgalore

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -122,7 +122,7 @@ process {
 
 if (!(params.skip_fastqc || params.skip_qc)) {
     process {
-        withName: '.*:FASTQC_TRIMGALORE:FASTQC' {
+        withName: 'FASTQC' {
             ext.args = '--quiet'
             publishDir = [
                 [
@@ -142,11 +142,17 @@ if (!(params.skip_fastqc || params.skip_qc)) {
 
 if (!params.skip_trimming) {
     process {
-        withName: '.*:FASTQC_TRIMGALORE:TRIMGALORE' {
-            ext.args   = [
-                '--fastqc',
-                params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : ''
-            ].join(' ').trim()
+        withName: 'TRIMGALORE' {
+            ext.args   = {
+                [
+                    '--fastqc',
+                    params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : '',
+                    params.clip_r1 > 0 ? "--clip_r1 ${params.clip_r1}" : '',
+                    params.clip_r2 > 0 ? "--clip_r2 ${params.clip_r2}" : '',
+                    params.three_prime_clip_r1 > 0 ? "--three_prime_clip_r1 ${params.three_prime_clip_r1}" : '',
+                    params.three_prime_clip_r2 > 0 ? "--three_prime_clip_r2 ${params.three_prime_clip_r2}" : ''
+                ].join(' ').trim()
+            }
             publishDir = [
                 [
                     path: { "${params.outdir}/trimgalore/fastqc" },
