--- a/conf/modules.config
+++ b/conf/modules.config
@@ -214,11 +214,13 @@ process {
 if (params.aligner == 'bwa') {
     process {
         withName: 'BWA_MEM' {
-            ext.args   = { [
-                            '-M',
-                            params.bwa_min_score ? " -T ${params.bwa_min_score}" : '',
-                            meta.read_group ? "-R ${meta.read_group}": ''
-                        ].join(' ').trim() }
+            ext.args   = {
+                [
+                    '-M',
+                    params.bwa_min_score ? " -T ${params.bwa_min_score}" : '',
+                    meta.read_group ? "-R ${meta.read_group}": ''
+                ].join(' ').trim()
+            }
             ext.args2  = '-bhS -F 0x0100 -O BAM'
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
