Refactor code to use nf-core official subworkflows

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -181,7 +181,7 @@ if (!params.skip_trimming) {
 }
 
 process {
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_STATS_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.Lb.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library" },
@@ -191,7 +191,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_STATS_SAMTOOLS:SAMTOOLS_INDEX' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library" },
             mode: params.publish_dir_mode,
@@ -200,7 +200,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_STATS_SAMTOOLS:BAM_STATS_SAMTOOLS:SAMTOOLS_.*' {
         ext.prefix = { "${meta.id}.Lb.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/library/samtools_stats/" },
@@ -359,7 +359,7 @@ process {
     }
 
     // Should only be published when paired end data is used and save_align_intermeds is true
-    withName: 'BAM_FILTER' {
+    withName: 'BAMTOOLS_FILTER' {
         ext.prefix = { meta.single_end ?  "${meta.id}.mLb.noPublish" : "${meta.id}.mLb.flT.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
@@ -375,7 +375,7 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
@@ -384,7 +384,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:SAMTOOLS_INDEX' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
@@ -393,7 +393,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
