Resolved arguments for bamtools_filteer

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -360,7 +360,14 @@ process {
 
     // Should only be published when paired end data is used and save_align_intermeds is true
     withName: 'BAMTOOLS_FILTER' {
-        ext.prefix = { meta.single_end ?  "${meta.id}.mLb.noPublish" : "${meta.id}.mLb.flT.sorted" }
+        ext.args   = {
+                [
+                    meta.single_end ? '-F 0x004' : '-F 0x004 -F 0x0008 -f 0x001',
+                    params.keep_dups ? '' : '-F 0x0400',
+                    params.keep_multi_map ? '' : '-q 1'
+                ].join(' ').trim()
+        }
+        ext.prefix = { meta.single_end ?  "${meta.id}.mLb.noPublish" : "${meta.id}.mLb.flT.sorted" } //TODO check with atacseq
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: params.publish_dir_mode,
