--- a/conf/modules.config
+++ b/conf/modules.config
@@ -322,7 +322,7 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
+    withName: '.*:BAM_MARKDUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
         ext.args   = '--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
         ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
         publishDir = [
@@ -340,7 +340,7 @@ process {
         ]
     }
 
-    withName: '.*:MARK_DUPLICATES_PICARD:SAMTOOLS_INDEX' {
+    withName: '.*:BAM_MARKDUPLICATES_PICARD:SAMTOOLS_INDEX' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
             mode: params.publish_dir_mode,
@@ -349,7 +349,7 @@ process {
         ]
     }
 
-    withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
+    withName: '.*:BAM_MARKDUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.mLb.mkD.sorted.bam" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/samtools_stats" },
