--- a/nextflow.config
+++ b/nextflow.config
@@ -63,6 +63,7 @@ params {
     skip_spp                   = false
     skip_igv                   = false
     skip_multiqc               = false
+    skip_peak_calling          = false
 
     // Options: Config
     bamtools_filter_pe_config  = "$projectDir/assets/bamtools_filter_pe.json"
