Make fasta available through IGV run

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -718,12 +718,16 @@ if (!params.skip_igv) {
     process {
         withName: 'IGV' {
             publishDir = [
-                    path: { [
-                        "${params.outdir}/igv",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                    ].join('') },
-                    mode: params.publish_dir_mode,
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                [
+                        path: { "${params.outdir}/igv/${params.narrow_peak? '/narrowPeak' : '/broadPeak' }" },
+                        mode: params.publish_dir_mode,
+                        pattern: '*.{txt,xml}'
+                ],
+                [
+                        path: { "${params.outdir}/genome" },
+                        mode: params.publish_dir_mode,
+                        pattern: '*.{fa,fasta}'
+                ]
             ]
         }
     }
