--- a/conf/modules.config
+++ b/conf/modules.config
@@ -67,7 +67,7 @@ process {
         ]
     }
 
-    withName: 'BWA_INDEX|BOWTIE2_BUILD|STAR_GENOMEGENERATE|CHROMAP_INDEX' {
+    withName: 'BWA_INDEX|BOWTIE2_BUILD|STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
@@ -257,7 +257,7 @@ if (params.aligner == 'chromap') {
     process {
         withName: 'CHROMAP_INDEX' {
             publishDir = [
-                path: { "${params.outdir}/genome/${params.aligner}/index" },
+                path: { "${params.outdir}/genome/index/${params.aligner}" },
                 mode: params.publish_dir_mode,
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
