Apply review changes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -456,7 +456,7 @@ process {
     }
 
     withName: 'UCSC_BEDGRAPHTOBIGWIG' {
-        ext.prefix = { "${meta.id}..mLb.clN" }
+        ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/bigwig" },
             mode: params.publish_dir_mode,
