Apply review changes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -438,7 +438,7 @@ process {
         ext.args   = {
             [
                 (meta.single_end && params.fragment_size > 0) ? "-fs ${params.fragment_size}" : ''
-            ].join(' ').trim()
+            ].trim()
         }
         ext.prefix = { "${meta.id}.mLB.clN" }
         publishDir = [
