Get rid of unused list for ext.args

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -435,11 +435,7 @@ process {
     }
 
     withName: 'BEDTOOLS_GENOMECOV' {
-        ext.args   = {
-            [
-                (meta.single_end && params.fragment_size > 0) ? "-fs ${params.fragment_size}" : ''
-            ].join(' ').trim()
-        }
+        ext.args   = { (meta.single_end && params.fragment_size > 0) ? "-fs ${params.fragment_size}" : '' }
         ext.prefix = { "${meta.id}.mLB.clN" }
         publishDir = [
             [
