fixed "protection stack overflow" issue by setting max-ppsize

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -418,6 +418,7 @@ process {
     }
 
     withName: 'PHANTOMPEAKQUALTOOLS' {
+        ext.args   = { "--max-ppsize=500000" }
         ext.args2  = { "-p=$task.cpus" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/phantompeakqualtools" },
