fix nf-core lint

--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -5,3 +5,8 @@ lint:
     - config_defaults:
         - params.bamtools_filter_se_config
         - params.bamtools_filter_pe_config
+  files_unchanged:
+    - .github/CONTRIBUTING.md
+    - .github/workflows/branch.yml
+    - .github/workflows/linting_comment.yml
+    - .github/workflows/linting.yml
