Update modules.config and other minor corrections

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -369,28 +369,6 @@ process {
         ]
     }
 
-    withName: 'BAM_REMOVE_ORPHANS' {
-        ext.args   = '--only_fr_pairs'
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/${params.aligner}/merged_library" },
-            mode: params.publish_dir_mode,
-            pattern: '*.bam',
-            enabled: params.save_align_intermeds
-        ]
-    }
-
-    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:SAMTOOLS_SORT' {
-        ext.args   = '-n'
-        ext.prefix = { "${meta.id}.mLb.flT.name_sorted" }
-        publishDir = [
-            path: { "${params.outdir}/${params.aligner}/merged_library" },
-            mode: params.publish_dir_mode,
-            pattern: '*.bam',
-            enabled: params.save_align_intermeds
-        ]
-    }
-
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:SAMTOOLS_INDEX' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
@@ -406,6 +384,28 @@ process {
             path: { "${params.outdir}/${params.aligner}/merged_library/samtools_stats" },
             mode: params.publish_dir_mode,
             pattern: "*.{stats,flagstat,idxstats}"
+        ]
+    }
+
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:BAM_FILTER_BAMTOOLS:SAMTOOLS_SORT' {
+        ext.args   = '-n'
+        ext.prefix = { "${meta.id}.mLb.flT.name_sorted" }
+        publishDir = [
+            path: { "${params.outdir}/${params.aligner}/merged_library" },
+            mode: params.publish_dir_mode,
+            pattern: '*.bam',
+            enabled: params.save_align_intermeds
+        ]
+    }
+
+    withName: 'BAM_REMOVE_ORPHANS' {
+        ext.args   = '--only_fr_pairs'
+        ext.prefix = { "${meta.id}.mLb.clN" }
+        publishDir = [
+            path: { "${params.outdir}/${params.aligner}/merged_library" },
+            mode: params.publish_dir_mode,
+            pattern: '*.bam',
+            enabled: params.save_align_intermeds
         ]
     }
 
@@ -427,7 +427,7 @@ process {
         ]
     }
 
-    withName: 'BEDTOOLS_GENOMECOV' {
+    withName: '.*:BAM_BEDGRAPH_BIGWIG_BEDTOOLS_UCSC:BEDTOOLS_GENOMECOV' {
         ext.args   = { (meta.single_end && params.fragment_size > 0) ? "-fs ${params.fragment_size}" : '' }
         ext.prefix = { "${meta.id}.mLB.clN" }
         publishDir = [
@@ -444,7 +444,7 @@ process {
         ]
     }
 
-    withName: 'UCSC_BEDGRAPHTOBIGWIG' {
+    withName: '.*:BAM_BEDGRAPH_BIGWIG_BEDTOOLS_UCSC:UCSC_BEDGRAPHTOBIGWIG' {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/bigwig" },
@@ -540,7 +540,7 @@ if (!params.skip_plot_fingerprint) {
 }
 
 process {
-    withName: 'MACS2_CALLPEAK' {
+    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:MACS2_CALLPEAK' {
         ext.args   = [
             '--keep-dup all',
             params.narrow_peak          ? '' : "--broad --broad-cutoff ${params.broad_cutoff}",
@@ -559,7 +559,7 @@ process {
         ]
     }
 
-    withName: 'FRIP_SCORE' {
+    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:FRIP_SCORE' {
         ext.args   = '-bed -c -f 0.20'
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
@@ -567,7 +567,7 @@ process {
         ]
     }
 
-    withName: 'MULTIQC_CUSTOM_PEAKS' {
+    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:MULTIQC_CUSTOM_PEAKS' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
             mode: params.publish_dir_mode,
@@ -578,7 +578,7 @@ process {
 
 if (!params.skip_peak_annotation) {
     process {
-        withName: 'HOMER_ANNOTATEPEAKS_MACS2' {
+        withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:HOMER_ANNOTATEPEAKS' {
             ext.args   = '-gid'
             ext.prefix = { "${meta.id}_peaks" }
             publishDir = [
@@ -591,7 +591,7 @@ if (!params.skip_peak_annotation) {
 
     if (!params.skip_peak_qc) {
         process {
-            withName: 'PLOT_MACS2_QC' {
+            withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:PLOT_MACS2_QC' {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
@@ -600,7 +600,7 @@ if (!params.skip_peak_annotation) {
                 ]
             }
 
-            withName: 'PLOT_HOMER_ANNOTATEPEAKS' {
+            withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:PLOT_HOMER_ANNOTATEPEAKS' {
                 ext.args   = '-o ./'
                 ext.prefix = 'macs2_annotatePeaks'
                 publishDir = [
