create subworkflows/local/bam_peaks_call_qc_annotate_macs2_homer similar to nf-core/atacseq

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -615,7 +615,7 @@ if (!params.skip_peak_annotation) {
 
 if (!params.skip_consensus_peaks) {
     process {
-        withName: 'MACS2_CONSENSUS' {
+        withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:MACS2_CONSENSUS' {
             ext.when   = { meta.multiple_groups || meta.replicates_exist }
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
@@ -625,7 +625,7 @@ if (!params.skip_consensus_peaks) {
             ]
         }
 
-        withName: 'SUBREAD_FEATURECOUNTS'  {
+        withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:SUBREAD_FEATURECOUNTS'  {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
@@ -638,7 +638,7 @@ if (!params.skip_consensus_peaks) {
 
     if (!params.skip_peak_annotation) {
         process {
-            withName: 'HOMER_ANNOTATEPEAKS_CONSENSUS' {
+            withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:HOMER_ANNOTATEPEAKS' {
                 ext.args   = '-gid'
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
@@ -648,7 +648,7 @@ if (!params.skip_consensus_peaks) {
                 ]
             }
 
-            withName: 'ANNOTATE_BOOLEAN_PEAKS' {
+            withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:ANNOTATE_BOOLEAN_PEAKS' {
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
@@ -661,7 +661,7 @@ if (!params.skip_consensus_peaks) {
 
     if (!params.skip_deseq2_qc) {
         process {
-            withName: DESEQ2_QC {
+            withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:DESEQ2_QC' {
                 ext.when   = { meta.multiple_groups && meta.replicates_exist }
                 ext.args   = [
                     '--id_col 1',
