suggestions from code review

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -540,7 +540,7 @@ if (!params.skip_plot_fingerprint) {
 }
 
 process {
-    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:MACS2_CALLPEAK' {
+    withName: 'MACS2_CALLPEAK' {
         ext.args   = [
             '--keep-dup all',
             params.narrow_peak          ? '' : "--broad --broad-cutoff ${params.broad_cutoff}",
@@ -559,7 +559,7 @@ process {
         ]
     }
 
-    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:FRIP_SCORE' {
+    withName: 'FRIP_SCORE' {
         ext.args   = '-bed -c -f 0.20'
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
@@ -567,7 +567,7 @@ process {
         ]
     }
 
-    withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:MULTIQC_CUSTOM_PEAKS' {
+    withName: 'MULTIQC_CUSTOM_PEAKS' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
             mode: params.publish_dir_mode,
@@ -591,7 +591,7 @@ if (!params.skip_peak_annotation) {
 
     if (!params.skip_peak_qc) {
         process {
-            withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:PLOT_MACS2_QC' {
+            withName: 'PLOT_MACS2_QC' {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/qc" },
@@ -600,7 +600,7 @@ if (!params.skip_peak_annotation) {
                 ]
             }
 
-            withName: '.*:BAM_PEAKS_CALL_QC_ANNOTATE_MACS2_HOMER:PLOT_HOMER_ANNOTATEPEAKS' {
+            withName: 'PLOT_HOMER_ANNOTATEPEAKS' {
                 ext.args   = '-o ./'
                 ext.prefix = 'macs2_annotatePeaks'
                 publishDir = [
@@ -615,7 +615,7 @@ if (!params.skip_peak_annotation) {
 
 if (!params.skip_consensus_peaks) {
     process {
-        withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:MACS2_CONSENSUS' {
+        withName: 'MACS2_CONSENSUS' {
             ext.when   = { meta.multiple_groups || meta.replicates_exist }
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
@@ -625,7 +625,7 @@ if (!params.skip_consensus_peaks) {
             ]
         }
 
-        withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:SUBREAD_FEATURECOUNTS'  {
+        withName: 'SUBREAD_FEATURECOUNTS'  {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             ext.prefix = { "${meta.id}.consensus_peaks" }
             publishDir = [
@@ -648,7 +648,7 @@ if (!params.skip_consensus_peaks) {
                 ]
             }
 
-            withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:ANNOTATE_BOOLEAN_PEAKS' {
+            withName: 'ANNOTATE_BOOLEAN_PEAKS' {
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { "${params.outdir}/${params.aligner}/merged_library/macs2/${params.narrow_peak ? '/narrow_peak' : '/broad_peak'}/consensus/${meta.id}" },
@@ -661,7 +661,7 @@ if (!params.skip_consensus_peaks) {
 
     if (!params.skip_deseq2_qc) {
         process {
-            withName: '.*:BED_CONSENSUS_QUANTIFY_QC_BEDTOOLS_FEATURECOUNTS_DESEQ2:DESEQ2_QC' {
+            withName: 'DESEQ2_QC' {
                 ext.when   = { meta.multiple_groups && meta.replicates_exist }
                 ext.args   = [
                     '--id_col 1',
